Add isort, yapf configurations

--- a/setup.cfg
+++ b/setup.cfg
@@ -7,3 +7,11 @@ exclude =
     .eggs,
     *.egg,
     */migrations/*
+
+[yapf]
+based_on_style = pep8
+blank_lines_between_top_level_imports_and_variables = 2
+column_limit = 120
+
+[isort]
+line_length = 120
