--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,17 +5,19 @@ on: [push, pull_request]
 jobs:
   test-bins:
     name: Test Bins
-    if: "!contains(github.event.head_commit.message, '[skip ci]')"
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: ['3.8', '3.9']
+    container: debian:bullseye-slim
     steps:
       - uses: actions/checkout@v2
 
-      - uses: actions/setup-python@v2
-        with:
-          python-version: ${{ matrix.python-version }}
+      - name: Install requirements
+        run: >
+          apt-get update;
+          apt-get install --no-install-recommends -y \
+            python3 python3-venv build-essential;
+
+      - name: Set github token for api call
+        run: echo "GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }}" >> .makerc
 
       - name: Prepare dependencies
         run: make prepare
